1.2.0p2:
    Checks & Agents:
    * FIX: Fixed syntax errors in a bunch of man pages
    * if_lancom: silently ignore Point-To-Point interfaces
    * if_lancom: add SSID to logical WLAN interface names
    * Added a collection of MSSQL checks for monitoring MSSQL servers
      (backups, tablespaces, counters)
    * New check wut_webio_io: Monitor the IO input channels on W&T Web-IO 
      devices
    * nfsmounts: reclassify "Stale NFS handle" from WARN to CRIT
    * ORACLE agent/checks: better error handling. Let SQL errors get
      through into check output, output sections even if no database
      is running.
    * oracle_version: new check outputting the version of an ORACLE
      database - and using uncached direct SQL output.
    * ORACLE agent: fix handling of EXCLUDE, new variable ONLY_SIDS
      for explicitely listing SIDs to monitor

    Multisite:
    * Show number of rows and number of selected rows in header line
      (also for WATO hosts table)
    * FIX: fix problem in showing exceptions (due to help function)

    WATO: 
    * Main menu of ruleeditor (Host & Service Parameters) now has
      a topic for "Used rules" - a short overview of all non-empty
      rulesets.
    * FIX: add missing context help to host details dialog
    * FIX: set new site dirty is host move due to change of
      folder attributes
    * FIX: fix exception on unknown value in DropdownChoice
    * FIX: add service specification to ruleset Delay service notifications

    BI:
    * New iterators FOREACH_CHILD and FOREACH_PARENT
    * FIX: fix handling of FOREACH_ in leaf nodes (remove hard coded
      $HOST$, replace with $1$, $2$, ..., apply argument substitution)
    * New logical datatable for aggregations that have the same name
      as a host. Converted view "BI Boxes" to this new table. This allows
      for Host-Aggregations containing data of other hosts as well.

1.2.0p1:
    Core:
    * Added macros $DATE$, $SHORTDATETIME$ and $LONGDATETIME$' to