@@ -1,4 +1,8 @@
 1.2.0p2:
+    Core:
+    * simulation_mode: legacy_checks, custom_checks and active_checks
+      are replaced with dummy checks always being OK
+
     Checks & Agents:
     * FIX: Fixed syntax errors in a bunch of man pages
     * if_lancom: silently ignore Point-To-Point interfaces
